--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,20 +3,18 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title='<Zyka>.'>
-  <h1
-    class='text-center font-normal text-transparent bg-gradient-to-r from-purple-100 to-purple-900 bg-clip-text'>
-    &lt;Zyka&gt;-ui
-  </h1>
-  <h1 class='font-light text-center text-white'>保留所有权利.</h1>
-  <a href='/posts' class='text-white border border-white p-1'>POSTS</a>
+    <h1 class='text-center text-5xl m-2 font-normal text-transparent bg-gradient-to-r from-purple-100 to-purple-900 bg-clip-text'>
+        &lt;Webbutvecklaren&gt;
+    </h1>
+    <h1 class='font-light text-lg text-center text-black dark:text-white'>Lär dig grunderna i modern webbutveckling.</h1>'
+    <div class='flex items-center justify-center'>
+        <a href='/posts' class='text-white border border-white p-1'>POSTS</a>
+    </div>
 </Layout>
 
 <style>
-  main {
-  }
-  h1 {
-    font-size: 3rem;
-    font-weight: 800;
-    margin: 0;
-  }
+    main {
+    }
+    h1 {
+    }
 </style>
