--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,13 +1,14 @@
 ---
+import { PostCard } from '../../components/PostCard';
 import Layout from '../../layouts/Layout.astro';
+const allPosts = await Astro.glob('./*.mdx');
 ---
 
-<Layout title='Docs'>
-  <ul>
-    <li>
-      <a class='text-white' href='./posts/cookies/'>
-        Learn more about Cookies!</a
-      >
-    </li>
-  </ul>
+<Layout title='All posts'>
+    <section class='' aria-label='All posts'>
+        <h1 class='text-center text-gray-500 font-semibold text-5xl mt-10'>Artiklar</h1>
+        <div class='flex flex-col items-center justify-center m-5'>
+            {allPosts.map((post) => <PostCard postData={post} />)}
+        </div>
+    </section>
 </Layout>
