--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { ProjectDescription } from '../components/ProjectDescription';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -7,11 +8,13 @@ import Layout from '../layouts/Layout.astro';
         &lt;Webbutvecklaren&gt;
     </h1>
     <h1 class='font-light text-lg text-center text-black dark:text-white'>Lär dig grunderna i modern webbutveckling.</h1>'
-    <div class='flex items-center justify-center'>
-        <a href='/posts' class='text-white border border-white p-1'>POSTS</a>
+
+    <ProjectDescription />
+
+    <div class='flex items-center justify-center mt-5'>
+        <a href='/posts' class='text-white border border-white p-1'>Artiklar</a>
     </div>
 </Layout>
-
 <style>
     main {
     }
