--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -20,7 +20,7 @@ const { title, sectiontitles, sections, date, author, tags, sources } = frontmat
                 </div>
             ))
         }
-        <p class='text-gray-400 mt-4'>Written by: {author}</p>
-        <p class='text-gray-400 mb-4'>{date}</p>
+        <p class='text-gray-400 mt-4 font-light'>Written by: {author}</p>
+        <p class='text-gray-400 mb-4 font-light'>{date}</p>
     </div>
 </Layout>
