--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,14 +1,25 @@
 ---
 import { PostCard } from '../../components/PostCard';
 import Layout from '../../layouts/Layout.astro';
+
+//utils import
+import { filterArticlePost } from '../../utils/functions';
+
+//get all posts
 const allPosts = await Astro.glob('./*.mdx');
+
+//filter
+const formatedPosts = filterArticlePost(allPosts, {
+    sortByDate: true,
+    limit: 2,
+});
 ---
 
 <Layout title='All posts'>
     <section class='' aria-label='All posts'>
         <h1 class='text-center text-gray-500 font-semibold text-5xl mt-10'>Artiklar</h1>
         <div class='flex flex-col items-center justify-center m-5'>
-            {allPosts.map((post) => <PostCard postData={post} />)}
+            {formatedPosts.map((post) => <PostCard postData={post} />)}
         </div>
     </section>
 </Layout>
