--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,20 +4,19 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title='<Zyka>.'>
-    <h1 class='text-center text-5xl m-2 font-normal text-transparent bg-gradient-to-r from-purple-100 to-purple-900 bg-clip-text'>
-        &lt;Webbutvecklaren&gt;
-    </h1>
-    <h1 class='font-light text-lg text-center text-black dark:text-white'>Lär dig grunderna i modern webbutveckling.</h1>'
+  <h1
+    class='text-center text-5xl m-2 font-normal text-transparent bg-gradient-to-r from-purple-100 to-purple-900 bg-clip-text'>
+    &lt;Webbutvecklaren&gt;
+  </h1>
+  <h1 class='font-light text-lg text-center text-black dark:text-white'>
+    Lär dig grunderna i modern webbutveckling.
+  </h1>'
 
-    <ProjectDescription />
-
-    <div class='flex items-center justify-center mt-5'>
-        <a href='/posts' class='text-white border border-white p-1'>Artiklar</a>
-    </div>
+  <ProjectDescription />
 </Layout>
 <style>
-    main {
-    }
-    h1 {
-    }
+  main {
+  }
+  h1 {
+  }
 </style>
