--- a/src/pages/articles/[...page].astro
+++ b/src/pages/articles/[...page].astro
@@ -1,5 +1,5 @@
 ---
-import Pagination from '../../components/Pagination.astro';
+import { Pagination } from '../../components/Pagination.jsx';
 import PostCard from '../../components/PostCard.astro';
 import Layout from '../../layouts/Layout.astro';
 import { getCollection, CollectionEntry } from 'astro:content';
