--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,38 @@
 ---
+import { Overview } from '../components/Overview/Overview';
 import { ProjectDescription } from '../components/ProjectDescription';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title='<Zyka>.'>
-  <h1
-    class='text-center text-5xl m-2 font-normal text-transparent bg-gradient-to-r from-purple-100 to-purple-900 bg-clip-text'>
-    &lt;Webbutvecklaren&gt;
-  </h1>
-  <h1 class='font-light text-lg text-center text-black dark:text-white'>
-    Lär dig grunderna i modern webbutveckling.
-  </h1>'
-  <ProjectDescription />
+  <section class='intro' aria-label='Website introduction'>
+    <h1 class='font-light text-md text-center m-8 text-black dark:text-bone'>
+      Lär dig webbutveckling - Påbörja din resa idag ✈
+    </h1>
+    <h2
+      class='text-center text-7xl m-4 font-normal text-transparent bg-gradient-to-r from-purple-100 to-purple-900 bg-clip-text'>
+      &lt;Webbutvecklaren&gt;
+    </h2>
+    <div class='flex flex-col items-center justify-center mt-8'>
+      <div class='flex flex-col w-2/5 sm:w-4/5 text-justify'>
+        <h3 class='font-light text-lg text-center text-black dark:text-white'>
+          Välkommen till Webbutvecklaren. En samlingsplats där du kan lära dig
+          om grundläggande ämnen i modern webbutveckling. Webbsidan ger dig en
+          översiktlig introduktion med förhoppning om att bistå dig i att hitta
+          rätt resurser. Ambitionen är att skapa en platform där du som
+          utvecklare kan få en översiktlig insikt i webbutvecklings
+          mångfacetterade landskap.
+        </h3>
+      </div>
+    </div>
+  </section>
+  <section class='m-5' aria-label='tools'>
+    <Overview />
+  </section>
+  <style>
+    main {
+    }
+    h1 {
+    }
+  </style>
 </Layout>
-<style>
-  main {
-  }
-  h1 {
-  }
-</style>
