added next section of landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import { Core } from '../components/Overview/Core';
 import { Overview } from '../components/Overview/Overview';
+import { Tech } from '../components/Overview/Tech';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -24,6 +25,7 @@ import Layout from '../layouts/Layout.astro';
         <Overview />
     </section>
     <Core />
+    <Tech />
     <style>
         main {
         }
