--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,12 +16,11 @@ const { title } = Astro.props;
         <main>
             <Header client:load />
             <slot />
-            <Footer client:load />
             <style is:global>
                 :root {
                 }
                 [data-theme='light'] {
-                    background-color: white;
+                    background-color: #f3efd3;
                 }
                 [data-theme='dark'] {
                     background-color: rgba(15, 8, 37, 1);
