--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { ArrowToTop } from '../components/ArrowToTop';
 import { Landingpage } from '../components/homepage/Landingpage';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -6,22 +7,22 @@ import Layout from '../layouts/Layout.astro';
 <Layout title='<Zyka>.'>
     <section class='intro' aria-label='Home page'>
         <header>
-            <h1 class='font-light text-md text-center m-8 text-black dark:text-bone'>Lär dig webbutveckling - Påbörja din resa idag ✈</h1>
+            <h1 class='font-light text-md text-center m-12 text-black dark:text-bone'>Lär dig webbutveckling - Påbörja din resa idag ✈</h1>
             <h2 class='text-center text-7xl m-4 font-normal text-transparent bg-gradient-to-r from-purple-100 to-purple-900 bg-clip-text'>
                 &lt;Webbutvecklaren&gt;
             </h2>
-            <div class='flex flex-col items-center justify-center mt-8'>
+            <div class='flex flex-col items-center justify-center mt-12'>
                 <div class='flex flex-col w-2/5 sm:w-4/5 text-justify'>
-                    <h3 class='font-light text-lg text-center text-black dark:text-gray-300'>
-                        Välkommen till Webbutvecklaren. En samlingsplats där du kan lära dig om grundläggande ämnen i modern webbutveckling.
-                        Webbsidan ger dig en översiktlig introduktion med förhoppning om att bistå dig i att hitta rätt resurser. Ambitionen
-                        är att skapa en platform där du som utvecklare kan få en översiktlig insikt i webbutvecklings mångfacetterade
-                        landskap.
+                    <h3 class='font-light text-lg text-justify dark:text-gray-300'>
+                        Välkommen till Webbutvecklaren. En samlingsplats där du kan lära dig absoluta grunderna webbutveckling. Webbsidan
+                        ger dig en översiktlig introduktion med relevant information om grundläggande webbutveckling. Ambitionen är att
+                        skapa en webbsida där du med inga förkunskaper ska kunna få en inblick i webbutvecklingens mångfacetterade landskap.
                     </h3>
                 </div>
             </div>
         </header>
         <Landingpage />
+        <ArrowToTop client:load />
     </section>
     <style>
         main {
