--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -3,9 +3,20 @@ const { title } = Astro.props;
 ---
 
 <head>
-  <meta charset='UTF-8' />
-  <meta name='viewport' content='width=device-width' />
-  <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-  <meta name='generator' content={Astro.generator} />
-  <title>{title}</title>
+    <script is:inline>
+        const theme = localStorage.getItem('theme');
+        if (theme === null) {
+            localStorage.setItem('theme', 'dark');
+            document.querySelector('html').className = 'dark';
+            document.documentElement.setAttribute('data-theme', 'dark');
+        } else {
+            document.querySelector('html').className = theme;
+            document.documentElement.setAttribute('data-theme', theme);
+        }
+    </script>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='generator' content={Astro.generator} />
+    <title>{title}</title>
 </head>
