--- a/src/pages/articles/[...page].astro
+++ b/src/pages/articles/[...page].astro
@@ -27,7 +27,7 @@ const { page } = Astro.props;
         <div class='mt-20 flex items-center justify-center'>
             <ArticleSeperator />
         </div>
-        <div class='flex sm:flex-col gap-20 items-center justify-center mt-24'>
+        <div class='flex sm:flex-col gap-12 sm:items-center items-start justify-center mt-24'>
             {page.data.map((post) => <PostCard data={post.data} url={post.slug} />)}
         </div>
         <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
