--- a/src/layouts/MarkdownArticleLayout.astro
+++ b/src/layouts/MarkdownArticleLayout.astro
@@ -12,7 +12,7 @@ const { title, sectiontitles, sections, date, author, tags, category, img } =
   frontmatter;
 ---
 
-<Layout title='posts'>
+<Layout title='posts' aria-label='posts'>
   <header>
     <div class="flex flex-col items-center justify-center mt-10">
       {(Object.keys(img).length > 0) ? <Image
