--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,7 @@ import Layout from '../layouts/Layout.astro';
         </header>
         <Landingpage />
         <ArrowToTop client:load />
+        <h3 class='text-center mb-4 text-primary font-light'>Webbsidan av: Emile Zyka</h3>
     </section>
     <style>
         main {
