removed react icons to fix deploy

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,16 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import { AiFillHome } from 'react-icons/ai';
 ---
 
 <Layout title='Page Not Found.'>
-  <div class='h-screen flex flex-col justify-center items-center'>
-    <h1 class='font-semibold text-9xl text-gray-400 underline'>404.</h1>
-    <p class='m-8 text-gray-400'>Page not Found.</p>
-    <a href='/'
-      ><AiFillHome
-        className='text-gray-400 text-2xl hover:scale-110 cursor-pointer'
-      /></a
-    >
-  </div>
+    <div class='h-screen flex flex-col justify-center items-center'>
+        <h1 class='font-semibold text-9xl text-gray-400 underline'>404.</h1>
+        <p class='m-8 text-gray-400'>Page not Found.</p>
+        <a href='/'><p class='text-gray-400 text-2xl hover:scale-110 cursor-pointer'>🏫</p></a>
+    </div>
 </Layout>
